Fixes #457 in a different way, by showing recent projects first and reducing spacing slightly.

--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -844,7 +844,7 @@ body.dark div.modal-view #item-list a {
 div.modal-view #item-list a img {
     position: absolute;
     left: 8px;
-    top: 8px;
+    top: 6px;
     width: 18px;
     height: 18px;
 }
